# Proyecto-Clasificacion

./: Modelado_Predictivo_Clasificacion_de_tendencia_suicida.ipynb  README.md  main.py  pyproject.toml
model_artifacts/: X_test_embeddings.pkl  data_splits.pkl  encoders.pkl
