[project]
name = "proyecto-clasificacion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imblearn>=0.0",
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.7",
    "nltk>=3.9.2",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.2",
    "shap>=0.49.1",
    "textblob>=0.19.0",
    "transformers==4.44.2",
    "umap-learn>=0.5.9.post2",
    "xgboost>=3.1.2",
]
